--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,3 +54,66 @@
 .button {
   background-color: #6949fd !important;
 }
+
+#title {
+  display: block;
+}
+
+#smallTitle {
+  display: none;
+}
+
+.active {
+  color: green;
+  font-weight: bold;
+}
+
+.notactive {
+  color: red;
+  font-weight: bold;
+}
+
+#toggle {
+  display: none;
+}
+
+#toggle-label {
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+  margin-left: 32px;
+}
+
+#toggle-label::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background-color: white;
+  border-radius: 50%;
+  transition: transform 0.3s;
+}
+
+#toggle:checked + label {
+  background-color: #2196f3;
+}
+
+#toggle:checked + label::before {
+  transform: translateX(20px);
+}
+
+@media screen and (max-width: 768px) {
+  #title {
+    display: none;
+  }
+
+  #smallTitle {
+    display: block;
+  }
+}
