--- a/templates/admin/quiz/admin_single_quiz.html
+++ b/templates/admin/quiz/admin_single_quiz.html
@@ -67,13 +67,13 @@ content %}{% include "admin/admin_wrapper.html" %}
                 %}N/a{% endif %}
               </p>
               <p class="col-12 col-sm-6">
-                <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at
+                <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at.strftime('%Y-%m-%d')
                 }}{% else %}N/a{% endif %}
               </p>
             </div>
             <div class="row">
               <p class="col-12 col-sm-6">
-                <strong>Created At:</strong> {% if sub %}{{ sub.created_at }}{%
+                <strong>Created At:</strong> {% if sub %}{{ sub.created_at.strftime('%Y-%m-%d') }}{%
                 else %}N/a{% endif %}
               </p>
             </div>
@@ -107,12 +107,12 @@ content %}{% include "admin/admin_wrapper.html" %}
               </p>
               <p class="col-12 col-sm-6">
                 <strong>Last Updated At:</strong> {% if chap %}{{
-                chap.updated_at }}{% else %}N/a{% endif %}
+                chap.updated_at.strftime('%Y-%m-%d') }}{% else %}N/a{% endif %}
               </p>
             </div>
             <div class="row">
               <p class="col-12 col-sm-6">
-                <strong>Created At:</strong> {% if chap %}{{ chap.created_at
+                <strong>Created At:</strong> {% if chap %}{{ chap.created_at.strftime('%Y-%m-%d')
                 }}{% else %}N/a{% endif %}
               </p>
             </div>
@@ -145,9 +145,9 @@ content %}{% include "admin/admin_wrapper.html" %}
                 <strong>Remarks:</strong> {% if quiz %}{{ quiz.remarks }}{% else
                 %}N/a{% endif %}
               </p>
-              <p class="col-12 col-sm-6">
-                <strong>Number of Questions:</strong> {% if quiz %}{{
-                quiz.number_of_questions }}{% else %}N/a{% endif %}
+              <p class="col-12 col-sm-6 {{"active" if quiz.is_active else "notactive"}}">
+                <strong>Status:</strong> {% if quiz %}{{ "Active"if
+                quiz.is_active else "Not-Active" }}{% else %}N/a{% endif %}
               </p>
             </div>
             <div class="row">
@@ -157,12 +157,12 @@ content %}{% include "admin/admin_wrapper.html" %}
               </p>
               <p class="col-12 col-sm-6">
                 <strong>Last Updated At:</strong> {% if quiz %}{{
-                quiz.updated_at }}{% else %}N/a{% endif %}
+                quiz.updated_at.strftime('%Y-%m-%d') }}{% else %}N/a{% endif %}
               </p>
             </div>
             <div class="row">
               <p class="col-12 col-sm-6">
-                <strong>Created At:</strong> {% if quiz %}{{ quiz.created_at
+                <strong>Created At:</strong> {% if quiz %}{{ quiz.created_at.strftime('%Y-%m-%d')
                 }}{% else %}N/a{% endif %}
               </p>
             </div>
@@ -203,28 +203,30 @@ content %}{% include "admin/admin_wrapper.html" %}
     <div>
       <h3>Question Management</h3>
       <div class="d-flex align-items-center">
-        <p class="mr-4">Total Rows: {{ total_rows }}</p>
+        <p class="mr-4">Total Rows: <strong>{{ total_rows }}</strong></p>
         <p>
-          Current Page: {% if skip and take %} {{ ((skip|int)/take)+1 }} {% else
-          %}1{% endif %}
+          Current Page: <strong>{% if skip and take %} {{ ((skip|int)/take)+1 }} {% else
+          %}1{% endif %}</strong>
         </p>
+      </div>
+      <div class="d-flex align-items-center" style="flex-wrap: wrap;">
+        <p class="mr-4">Total marks of Quiz: <strong>{{ quiz.total_marks }}</strong></p>
+        <p class="mr-4">Marks alloted: <strong>{{ marks_alloted }}</strong></p>
+        <p>Marks remaining: <strong>{{ marks_remaining }}</strong></p>
       </div>
     </div>
     <div class="form-inline my-2 my-lg-0">
       <div class="d-flex">
-        {% if quiz.number_of_questions > total_rows %}<button
-          type="button"
-          class="btn btn-primary mr-3"
-        >
+        {% if marks_remaining>0 %}
+        <button type="button" class="btn btn-primary mr-3">
           <a
             href="/admin/subject/chapter/quiz/question/new?sub_id={{ sub.id }}&quiz_id={{ quiz.id }}&chap_id={{ chap.id }}"
             class="text-white"
             >New Question</a
-          ></button
-        >{% else %}
-        <button type="button" class="btn mr-3">
-          No More question space available
+          >
         </button>
+        {% else %}
+        <p class="mr-3">No more questions possible</p>
         {% endif %}
         <button
           type="button"
@@ -289,8 +291,8 @@ content %}{% include "admin/admin_wrapper.html" %}
             <td>{{ question.option_4 }}</td>
             <td>{{ question.correct_option }}</td>
             <td>{{ question.marks }}</td>
-            <td>{{ question.created_at }}</td>
-            <td>{{ question.updated_at }}</td>
+            <td>{{ question.created_at.strftime('%Y-%m-%d') }}</td>
+            <td>{{ question.updated_at.strftime('%Y-%m-%d') }}</td>
             <td>
               <button
                 onclick="window.location.href='/admin/subject/chapter/quiz/question/update?question_id={{ question.id }}&quiz_id={{ quiz.id }}&chap_id={{ chap.id }}&sub_id={{ sub.id }}'"
