--- a/templates/user/result.html
+++ b/templates/user/result.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Score Page{% endblock %} {% block
 content %} {% include "user/user_wrapper.html" %}
 <section>
-  <h1>score page</h1>
+  <h1>result page</h1>
 </section>
 {% endblock %}
