--- a/templates/user/start_quiz.html
+++ b/templates/user/start_quiz.html
@@ -161,6 +161,7 @@ content %} {% include "user/user_wrapper.html" %}
     >
   </form>
 </section>
+{% endblock %} {% block scripts %}
 <script>
   if (performance.navigation.type === 1) {
     console.log("Page was refreshed.");
