--- a/templates/login.html
+++ b/templates/login.html
@@ -63,7 +63,7 @@ block content %}
         />
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-4">
       <div class="form-group mx-auto col-12 col-sm-6">
         <button type="submit" class="w-100 button btn btn-primary">
           Submit
