--- a/templates/user/scores.html
+++ b/templates/user/scores.html
@@ -1,6 +1,93 @@
 {% extends "base.html" %} {% block title %}Score Page{% endblock %} {% block
 content %} {% include "user/user_wrapper.html" %}
-<section>
-  <h1>score page</h1>
+<section class="min-vh-100 p-4">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="/user">Home</a></li>
+      <li class="breadcrumb-item">
+        <a>Scores List</a>
+      </li>
+    </ol>
+  </nav>
+
+  <div class="d-flex mt-3 flex-wrap justify-content-between">
+    <div>
+      <h3>Score List</h3>
+      <div class="d-flex align-items-center">
+        <p class="mr-4">Total Rows: <strong>{{ total_rows }}</strong></p>
+        <p>
+          Current Page:
+          <strong
+            >{% if skip and take %} {{ ((skip|int)/take)+1 }} {% else %}1{%
+            endif %}</strong
+          >
+        </p>
+      </div>
+    </div>
+  </div>
+  <!-- flash message -->
+  {% with messages = get_flashed_messages(with_categories=True) %}{% if messages
+  %}
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-6">
+        {% for category, message in messages %}
+        <div
+          class="alert alert-{{ category }} alert-dismissible fade show"
+          role="alert"
+        >
+          {{ message }}
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  {% endif %}{% endwith %}
+  <section class="mt-3">
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th scope="col">S.No.</th>
+            <th scope="col">Question Attempted</th>
+            <th scope="col">Question Corrected</th>
+            <th scope="col">Question Wrong</th>
+            <th scope="col">Marks Earned</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for score in rows %}
+          <tr class="pointer">
+            <th scope="row">{{ loop.index+skip }}</th>
+            <td>{{ score.question_attempted }}</td>
+            <td>{{ score.question_corrected }}</td>
+            <td>{{ score.question_wronged }}</td>
+            <td>
+              {{ score.total_scored }}/<strong>{{ score.total_marks }}</strong>
+            </td>
+            <td>
+              <button type="button" class="btn btn-primary">
+                <a
+                  href="/user/score/view?score_id={{ score.id }}"
+                  class="text-white"
+                  >View</a
+                >
+              </button>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </section>
 </section>
 {% endblock %}
